changed name added author

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "Menno van Balen",
+  "name": "fcc-learn-npm-package-json",
+  "author": "Menno van Balen",
   "dependencies": {
     "express": "^4.14.0"
   },
